[package]
name = "fog-report-cli"
version = "1.1.0"
authors = ["MobileCoin"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
fog-ingest-enclave-measurement = { path = "../../ingest/enclave/measurement" }

mc-account-keys = { path = "../../../mobilecoin/account-keys" }
mc-attest-core = { path = "../../../mobilecoin/attest/core" }
mc-common = { path = "../../../mobilecoin/common", features = ["loggers"] }
mc-crypto-keys = { path = "../../../mobilecoin/crypto/keys" }
mc-fog-report-connection = { path = "../../../mobilecoin/fog/report/connection" }
mc-fog-report-validation = { path = "../../../mobilecoin/fog/report/validation" }
mc-util-keyfile = { path = "../../../mobilecoin/util/keyfile" }
mc-util-uri = { path = "../../../mobilecoin/util/uri" }

binascii = "0.1.4"
grpcio = "0.9.0"
structopt = "0.3"
