[package]
name = "fog-report-server"
version = "1.0.1-pre1"
authors = ["MobileCoin"]
edition = "2018"
license = "GPL-3.0"

[lib]
name = "fog_report_server"
path = "src/lib.rs"

[[bin]]
name = "report_server"
path = "src/bin/main.rs"

[dependencies]
mc-attest-core = { path = "../../../mobilecoin/attest/core" }
mc-common = { path = "../../../mobilecoin/common", features = ["log"] }
mc-crypto-keys = { path = "../../../mobilecoin/crypto/keys" }
mc-crypto-x509-utils = { path = "../../../mobilecoin/crypto/x509/utils" }
mc-fog-sig-report = { path = "../../../mobilecoin/fog/sig/report" }
mc-fog-types = { path = "../../../mobilecoin/fog/types" }
mc-util-grpc = { path = "../../../mobilecoin/util/grpc" }
mc-util-metrics = { path = "../../../mobilecoin/util/metrics" }
mc-util-uri = { path = "../../../mobilecoin/util/uri" }

fog-api = { path = "../../api" }
fog-recovery-db-iface = { path = "../../recovery_db_iface" }
fog-sql-recovery-db = { path = "../../sql_recovery_db" }

displaydoc = "0.1.7"
futures = "0.3"
grpcio = "0.6.0"
pem = "0.8"
prost = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
signature = "1.2.2"
structopt = "0.3"
x509-signature = "0.5"
zeroize = "1"

[dev-dependencies]
rand = "0.7"
tempdir = "0.3"

mc-common = { path = "../../../mobilecoin/common", features = ["loggers"] }
mc-crypto-keys = { path = "../../../mobilecoin/crypto/keys" }
mc-crypto-x509-test-vectors = { path = "../../../mobilecoin/crypto/x509/test-vectors" }
mc-util-from-random = { path = "../../../mobilecoin/util/from-random" }

fog-test-infra = { path = "../../test_infra" }
