[package]
name = "fog-ingest-enclave-api"
version = "1.0.1-pre1"
authors = ["MobileCoin"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
mc-attest-core = { path = "../../../../mobilecoin/attest/core", default-features = false }
mc-attest-enclave-api = { path = "../../../../mobilecoin/attest/enclave-api", default-features = false }
mc-common = { path = "../../../../mobilecoin/common", default-features = false }
mc-crypto-keys = { path = "../../../../mobilecoin/crypto/keys", default-features = false }
mc-util-serial = { path = "../../../../mobilecoin/util/serial", default-features = false }
mc-sgx-compat = { path = "../../../../mobilecoin/sgx/compat", default-features = false }
mc-sgx-report-cache-api = { path = "../../../../mobilecoin/sgx/report-cache/api" }

fog-kex-rng = { path = "../../../kex_rng" }
fog-types = { path = "../../../fog_types", default-features = false }

displaydoc = { version = "0.1", default-features = false }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
